// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[reducer/themes] 1`] = `
Object {
  "btn": "#4CAF50",
  "colorPickerActive": false,
  "darkPrimary": "#930e3b",
  "darkUI": false,
  "primary": "#E91E63",
  "version": "1.0.0",
}
`;

exports[`[reducer/themes] 2`] = `
Object {
  "btn": "#4CAF50",
  "colorPickerActive": false,
  "darkPrimary": "#02638f",
  "darkUI": false,
  "primary": "#03A9F4",
  "version": "1.0.0",
}
`;

exports[`[reducer/themes] 3`] = `
Object {
  "btn": "#9C27B0",
  "colorPickerActive": false,
  "darkPrimary": "#02638f",
  "darkUI": false,
  "primary": "#03A9F4",
  "version": "1.0.0",
}
`;

exports[`[reducer/themes] 4`] = `
Object {
  "btn": "#8BC34A",
  "colorPickerActive": false,
  "darkPrimary": "#02638f",
  "darkUI": false,
  "primary": "#03A9F4",
  "version": "1.0.0",
}
`;

exports[`[reducer/themes] 5`] = `
Object {
  "btn": "#8BC34A",
  "colorPickerActive": false,
  "darkPrimary": "#d4be00",
  "darkUI": true,
  "primary": "#FFEB3B",
  "version": "1.0.0",
}
`;
